[package]
name = "async-bulkhead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["tokio1/sync", "tokio1/time"]
async-std = ["async-lock", "async-std1/futures-lite"]
smol = ["async-lock", "smol-timeout"]

[dependencies]
tokio1 = { package = "tokio", version = "1", default-features = false, optional = true }
futures-lite = "1"
thiserror = "1"
async-lock = { version = "2", optional = true }
async-std1 = { package = "async-std", version = "1", optional = true }
smol-timeout = { version = "0.6", optional = true }

[dev-dependencies]
tokio1 = { package = "tokio", version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
assert_matches = "1.5"