[package]
name = "async-bulkhead"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nnazo/async-bulkhead"
documentation = "https://docs.rs/async-bulkhead"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
An async semaphore-based bulkhead implementation
"""
keywords = ["bulkhead", "resiliency", "patterns"]

[features]
default = ["rt-tokio"]
rt-tokio = ["tokio/sync", "tokio/time"]
rt-async-std = ["async-std/futures-lite"]
rt-smol = ["smol-timeout"]

[dependencies]
futures-lite = "1"
thiserror = "1"
async-lock = "2"
cfg-if = "1"
tokio = { version = "1", default-features = false, optional = true }
async-std = { version = "1", optional = true }
smol-timeout = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
assert_matches = "1.5"

